40 percent of orgi doc

--- a/project.ipynb
+++ b/project.ipynb
@@ -1211,7 +1211,7 @@
    "id": "d22a0113",
    "metadata": {},
    "source": [
-    "To begin processing our data to create extractive summaries we implement a method of assigning vectors to words called Term Frequency - Inverse Document Frequency(tf-idf). This process allows us to assign a concept of importance and meaning to words in our documents represented by a number. This is done by first getting the term frequency, a count of each term in its document divided by the total number of terms in that document. Then the inverse document frequency, which is the total number of documents in our corpus divided by the number of documents containing some specific word, that value is then multiplied by log base e. We will do this for each document to produce a unique set of vector word pairs. The higher a vector the more important that word is to that document. "
+    "To begin processing our data to create extractive summaries we implement a method of assigning vectors to words called Term Frequency - Inverse Document Frequency(tf-idf). This process allows us to assign a concept of importance and meaning to words in our documents represented by a number. This is done by first getting the term frequency, a count of each term in its document divided by the total number of terms in that document. Then the inverse document frequency, which is the total number of documents in our corpus divided by the number of documents containing some specific word, that value is then multiplied by log base e. We will do this for each document to produce a unique set of vector word pairs. The higher a vector, the more important that word is to that document. "
    ]
   },
   {
@@ -1323,12 +1323,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 167,
    "id": "20bdf719",
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_percent = 0.6 # Percentage of total document sentences to save as the summary\n",
+    "summary_percent = 0.4 # Percentage of total document sentences to save as the summary\n",
     "doc_summaries = [] # List to store the document summaries\n",
     "doc_list = df_elife_train_clean.article.tolist() # List of all the docs in elife train\n",
     "\n",
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 168,
    "id": "50b4e85d-2569-4bd3-a85e-6fad6373b3f3",
    "metadata": {},
    "outputs": [],
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 169,
    "id": "29ef351a-a062-4de0-a060-c75f26f6c983",
    "metadata": {},
    "outputs": [
@@ -1424,7 +1424,7 @@
        "      <td>2019</td>\n",
        "      <td>Complement and CD4+ T cells drive context-spec...</td>\n",
        "      <td>whether complement dysregulation directly cont...</td>\n",
-       "      <td>Whether complement dysregulation directly cont...</td>\n",
+       "      <td>We addressed this important question in a mous...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1484,7 +1484,7 @@
        "      <td>2017</td>\n",
        "      <td>Tree crickets optimize the acoustics of baffle...</td>\n",
        "      <td>object manufacture insects typically inherit b...</td>\n",
-       "      <td>Optimization , the ability to select the funct...</td>\n",
+       "      <td>Here , we show that tree-crickets optimize aco...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1508,7 +1508,7 @@
        "      <td>2018</td>\n",
        "      <td>Structural basis of malodour precursor transpo...</td>\n",
        "      <td>mammal produce volatile odour convey different...</td>\n",
-       "      <td>Mammals produce volatile odours that convey di...</td>\n",
+       "      <td>Here we report the structural and biochemical ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1601,18 +1601,18 @@
        "\n",
        "                                       tfidf_summary  \n",
        "0  In temperate climates , winter deaths exceed s...  \n",
-       "1  Whether complement dysregulation directly cont...  \n",
+       "1  We addressed this important question in a mous...  \n",
        "2  Variation in the presentation of hereditary im...  \n",
        "3  The relative roles of distinct subregions with...  \n",
        "4  By following the motion of individual heads wi...  \n",
        "5  As latently infected cells cannot be phenotype...  \n",
-       "6  Optimization , the ability to select the funct...  \n",
+       "6  Here , we show that tree-crickets optimize aco...  \n",
        "7  Missense mutations of valosin-containing prote...  \n",
-       "8  Mammals produce volatile odours that convey di...  \n",
+       "8  Here we report the structural and biochemical ...  \n",
        "9  The aim of the current study was to analyse an...  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "15005880-185b-4ee2-83e8-14057b2953fb",
    "metadata": {},
    "outputs": [],
@@ -1634,42 +1634,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "id": "06c6d156-a706-4b24-9ede-43cd82328412",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'In temperate climates , winter deaths exceed summer ones . However , there is limited information on the timing and the relative magnitudes of maximum and minimum mortality , by local climate , age group , sex and medical cause of death . We used geo-coded mortality data and wavelets to analyse the seasonality of mortality by age group and sex from 1980 to 2016 in the USA and its subnational climatic regions . In these ages , percent difference in death rates between peak and minimum months did not vary across climate regions , nor changed from 1980 to 2016 . It is well-established that death rates vary throughout the year , and in temperate climates there tend to be more deaths in winter than in summer  . In a large country like the USA , which possesses distinct climate regions , the seasonality of mortality may vary geographically , due to geographical variations in mortality , localized weather patterns , and regional differences in adaptation measures such as heating , air conditioning and healthcare  . The presence and extent of seasonal variation in mortality may also itself change over time  . Although mortality seasonality is well-established , there is limited information on how seasonality , including the timing of minimum and maximum mortality , varies by local climate and how these features have changed over time , especially in relation to age group , sex and medical cause of death  . In this paper , we comprehensively characterize the spatial and temporal patterns of all-cause and cause-specific mortality seasonality in the USA by sex and age group , through the application of wavelet analytical techniques , to over three decades of national mortality data . Wavelets have been used to study the dynamics of weather phenomena  and infectious diseases  . We also used centre of gravity analysis and circular statistics methods to understand the timing of maximum and minimum mortality . In addition , we identify how the percentage difference between death rates in maximum and minimum mortality months has changed over time . The strengths of our study are its innovative methods of characterizing seasonality of mortality dynamically over space and time , by age group and cause of death; using wavelet and centre of gravity analyses; using ERA-Interim data output to compare the association between seasonality of death rates and regional temperature . We used wavelet and centre of gravity analyses , which allowed systematically identifying and characterizing seasonality of total and cause-specific mortality in the USA , and examining how seasonality has changed over time . We identified distinct seasonal patterns in relation to age and sex , including higher all-cause summer mortality in young men  . Importantly , we also showed that all-cause and cause-specific mortality seasonality is largely similar in terms of both timing and magnitude across diverse climatic regions with substantially different summer and winter temperatures . Insights of this kind would not have been possible analysing data averaged over time or nationally , or fixed to pre-specified frequencies . Prior studies have noted seasonality of mortality for all-cause mortality and for specific causes of death in the USA  . Few of these studies have done consistent national and subnational analyses , and none has done so over time , for a comprehensive set of age groups and causes of death , and in relation to regional temperature differences . Our results on strong seasonality of cardiorespiratory diseases deaths and weak seasonality of cancer deaths , restricted to older ages , are broadly consistent with these studies  , which had limited analysis on how seasonality changes over time and geography  . Similarly , our results on seasonality of injury deaths are supported by a few prior studies  , but our subnational analysis over three decades revealed variations in when injury deaths peaked and in how seasonal differences in these deaths have changed over time in relation to age group which had not been reported before . A study of 36 cities in the USA , aggregated across age groups and over time , also found that excess mortality was not associated with seasonal temperature range  . In contrast , a European study found that the difference between winter and summer mortality was lower in colder Nordic countries than in warmer southern European nations   . The absence of variation in the magnitude of mortality seasonality indicates that different regions in the USA are similarly adapted to temperature seasonality , whereas Nordic countries may have better environmental  and health system measures to counter the effects of cold winters than those in southern Europe . If the observed absence of association between the magnitude of mortality seasonality and seasonal temperature difference across the climate regions also persists over time , the changes in temperature as a result of global climate change are unlikely to affect the winter-summer mortality difference . The cause-specific analysis showed that the substantial decline in seasonal mortality differences in adolescents and young adults was related to the diminishing seasonality of  injuries , especially from road traffic crashes , which are more likely to occur in the summer months  and are more common in men . This finding demonstrates the need for environmental and health service interventions targeted towards this group irrespective of geography and local climate . Social interventions , including regular visits to the isolated elderly during peak mortality periods to ensure that they are optimally prepared for adverse conditions , and responsive and high-quality emergency care , are also important to protect this vulnerable group  . Emergent new technologies , such as always-connected hands-free communications devices with the outside world , in-house cameras , and personal sensors also provide an opportunity to enhance care for the older , more vulnerable groups in the population , especially in winter when the elderly have fewer social interactions  . We used data on all 85 , 854 , 176 deaths in the USA from 1980 to 2016 from the National Center for Health Statistics  . We also subdivided the national data geographically into nine climate regions used by the National Oceanic and Atmospheric Administration   . Data were divided by sex and age in the following 10 age groups: 0–4 , 5–14 , 15-24 , 25–34 , 35–44 , 45–54 , 55–64 , 65–74 , 75–84 , 85+\\xa0years . For analysis of seasonality by cause of death , we mapped each ICD-9 and ICD-10 codes to four main disease categories  and to a number of subcategories which are presented in the Supplementary Note . We did not further divide other causes because the number of deaths could become too small to allow stable estimates when divided by age group , sex and climate region . We used gridded four-times-daily estimates at a resolution of 80 km to generate monthly population-weighted temperature by climate region throughout the analysis period . We used wavelet analysis to investigate seasonality for each age-sex group . Wavelet analysis uncovers the presence , and frequency , of repeated maxima and minima in each age-sex-specific death rate time series  . In brief , a Morlet wavelet , described in detail elsewhere  , is equivalent to using a moving window on the death rate time series and analysing periodicity in each window using a short-form Fourier transform , hence generating a dynamic spectral analysis , which allows measuring dynamic seasonal patterns , in which the periodicity of death rates may disappear , emerge , or change over time . In addition to coefficients that measure the frequency of periodicity , wavelet analysis estimates the probability of whether the data are different from the null situation of random fluctuations that can be represented with white  or red  noise . For each age-sex group , we calculated the p-values of the presence of 12 month seasonality for the comparison of wavelet power spectra of the entire study period  with 100 simulations against a white noise spectrum , which represents random fluctuations . Before analysis , we de-trended death rates using a polynomial regression , and rescaled each death rate time series so as to range between 1 and −1 . Centre of gravity was calculated as a weighted average of months of deaths , with each month weighted by its death rate; negative centre of gravity was also calculated as a weighted average of months of deaths , but with each month was weighted by the difference between its death rate and the year’s maximum death rate . Using a technique called circular statistics , a mean  of the angles  representing the deaths  is found using the relation below:θ-=arg∑j=1nexp\\u2061  , where arg denotes the complex number argument and θj denotes the month of death in angular form for a particular death j . Along with each circular mean , a 95% confidence interval  was calculated by using 1000 bootstrap samples . The R package CircStats  was used for this analysis . For each age-sex group and cause of death , and for each year , we calculated the percent difference in death rates between the maximum and minimum mortality months . We fitted a linear regression to the time series of seasonal differences from 1980 to 2016 , and used the fitted trend line to estimate how much the percentage difference in death rates between the maximum and minimum mortality months had changed from 1980 to 2016 . We weighted seasonal difference by the inverse of the square of its standard error , which was calculated using a Poisson model to take population size of each age-sex group through time into account . This method gives us a p-value for the change in seasonal difference per year , which we used to calculate the seasonal difference at the start  and end  of the period of study . Our method of analysing seasonal differences avoids assuming that any specific month or group of months represent highest and lowest number of deaths for a particular cause of death , which is the approach taken by the traditional measure of Excess Winter Deaths . It also allows the maximum and minimum mortality months to vary by age group , sex and cause of death . '"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tfidf_top_ten[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "id": "9c29d9e4-5002-4b27-aa3c-165226b28d50",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'In the USA , more deaths happen in the winter than the summer . But when deaths occur varies greatly by sex , age , cause of death , and possibly region . Seasonal differences in death rates can change over time due to changes in factors that cause disease or affect treatment . Analyzing the seasonality of deaths can help scientists determine whether interventions to minimize deaths during a certain time of year are needed , or whether existing ones are effective . Scrutinizing seasonal patterns in death over time can also help scientists determine whether large-scale weather or climate changes are affecting the seasonality of death . Now , Parks et al . show that there are age and sex differences in which times of year most deaths occur . Parks et al . analyzed data on US deaths between 1980 and 2016 . While overall deaths in a year were highest in winter and lowest in summer , a greater number of young men died during summer – mainly due to injuries – than during winter . Seasonal differences in deaths among young children have largely disappeared and seasonal differences in the deaths of older children and young adults have become smaller . Deaths among women and men aged 45 or older peaked between December and February – largely caused by respiratory and heart diseases , or injuries . Deaths in this older age group were lowest during the summer months . Death patterns in older people changed little over time . No regional differences were found in seasonal death patterns , despite large climate variation across the USA . The analysis by Parks et al . suggests public health and medical interventions have been successful in reducing seasonal deaths among many groups . But more needs to be done to address seasonal differences in deaths among older adults . For example , by boosting flu vaccination rates , providing warnings about severe weather and better insulation for homes . Using technology like hands-free communication devices or home visits to help keep vulnerable elderly people connected during the winter months may also help .'"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "orig_sum_top_ten[0]"
    ]
