--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "34afc979",
+   "metadata": {},
+   "source": [
+    "# Table of Contents\n",
+    "* [Evaluation overview](#evaluation)\n",
+    "* [Evaluation metrics](#evaluation-metrics)\n",
+    "  * [Relevance](#relevance)\n",
+    "  * [Readability](#readability)\n",
+    "  * [Factuality](#factuality)\n",
+    "* [Latest Results](#)\n",
+    "* [Info from 2024](#official-evaluation-pipline-from-2024)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "371938d5",
    "metadata": {},
    "source": [
-    "## Evaluation"
+    "## Evaluation <a class=\"ahchor\" id=\"eval\"></a>"
    ]
   },
   {
@@ -16,10 +31,28 @@
     "We have two goals with the evaluation portion:\n",
     "1. Have a working evaluation that gives reasonable results\n",
     "   * Now that it is open, we will use the task [codabench](https://www.codabench.org/competitions/7351/)\n",
-    "   * We can run up to 10 evals a day with a task maximum of 100. Each run takes about three hours.\n",
+    "   * We can run up to 10 evals a day with a task maximum of 100. Each run can take 4+ hours.\n",
     "2. Understand how all of the evaluation metrics work and what the results mean\n",
     "   * We're doing this by re-creating the [pipeline from 2024](https://github.com/TGoldsack1/BioLaySumm2024-evaluation_scripts) and running it locally. \n",
     "   * The code had some issues when installed locally due to conflicting dependencies, missing checkpoints, and unequal file sizes. Dependencies were corrected by creating a very specific environment, missing checkpoints were fixed by using a different set of LENS checkpoints, and unequal file sizes were address by using the minimum length of the two files."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c66650fe",
+   "metadata": {},
+   "source": [
+    "## Latest Results\n",
+    "\n",
+    "| Run | Relevance | | | | Readability | | | | Factuality | |\n",
+    "|--------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|\n",
+    "| | **ROUGE** | **BLEU** | **METEOR** | **BERTScore** | **FKGL** | **DCRS** | **CLI** | **LENS** | **AlignScore** | **SummaC** |\n",
+    "| 4/25 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |\n",
+    "|  | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |\n",
+    "|  | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |\n",
+    "|  | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |\n",
+    "\n",
+    "*Note: Higher scores are better for all metrics except readability measures (FKGL, DCRS, CLI) where lower scores indicate better readability.*"
    ]
   },
   {
