add latest results

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Table of Contents\n",
     "* [Evaluation overview](#evaluation)\n",
+    "* [Latest Results](#latest-results)\n",
     "* [Evaluation metrics](#evaluation-metrics)\n",
     "  * [Relevance](#relevance)\n",
     "  * [Readability](#readability)\n",
     "  * [Factuality](#factuality)\n",
-    "* [Latest Results](#)\n",
     "* [Info from 2024](#official-evaluation-pipline-from-2024)"
    ]
   },
@@ -43,16 +43,21 @@
    "metadata": {},
    "source": [
     "## Latest Results\n",
+    "|  |  | Relevance |  |  |  |  |  | Readability |  |  |  | Factuality |  |\n",
+    "|:----:|:-----:|:---------:|:---------:|:---------:|:---------:|:---------:|:---------:|:-----------:|:-----------:|:-----------:|:-----------:|:----------:|:----------:|\n",
+    "|**Date**|**Where**| ROUGE1 | ROUGE2 | ROUGEL | BLEU | METEOR | BERTScore | FKGL | DCRS | CLI | LENS | AlignScore | SummaC |\n",
+    "| Best  |          | 48.72 | 15.69 | 45.50 | x | x | 86.77 | 10.46 | 6.76  | 11.04 | 81.21 | 93.08 | 90.28 |\n",
+    "| Worst |          | 25.64 | 4.03  | 23.18 | x | x | 80.63 | 36.29 | 12.45 | 18.98 | 1.32  | 42.41 | 44.61 |\n",
+    "| 4/25  | Codabench|       |       |       |   |   |       |       |       |       |       |       |       |\n",
+    "| 4/25  | Local    | 0.1126| 0.0191| 0.1080|   |   | 0.8006|15.4339|8.3134 | 4.9358|       |       |       |\n",
+    "|  | |  |  |  ||  |     |||     |||  |\n",
+    "|  | |  |  |  ||  |     |||     |||  |\n",
     "\n",
-    "| Run | Relevance | | | | Readability | | | | Factuality | |\n",
-    "|--------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|-----------|\n",
-    "| | **ROUGE** | **BLEU** | **METEOR** | **BERTScore** | **FKGL** | **DCRS** | **CLI** | **LENS** | **AlignScore** | **SummaC** |\n",
-    "| 4/25 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |\n",
-    "|  | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |\n",
-    "|  | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |\n",
-    "|  | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |\n",
     "\n",
-    "*Note: Higher scores are better for all metrics except readability measures (FKGL, DCRS, CLI) where lower scores indicate better readability.*"
+    "\n",
+    "*Note: Higher scores are better for all metrics except readability measures (FKGL, DCRS, CLI) where lower scores indicate better readability.*\n",
+    "\n",
+    "*The Best and Worst rows are the highest and lowest scores from 2024.*"
    ]
   },
   {
@@ -90,7 +95,7 @@
     "Kishore Papineni, Salim Roukos, Todd Ward, and Wei-Jing Zhu. 2002. BLEU: a method for automatic evaluation of machine translation. In Proceedings of the 40th Annual Meeting on Association for Computational Linguistics (ACL '02). Association for Computational Linguistics, USA, 311–318. https://doi.org/10.3115/1073083.1073135\n",
     "</div>\n",
     "\n",
-    "**METEOR**\n",
+    "**METEOR** ☄️\n",
     "\n",
     "<div style=\"padding-left: 2em;\">\n",
     "\n",
@@ -99,8 +104,15 @@
     "Banerjee, S., & Lavie, A. (2005). METEOR: An Automatic Metric for MT Evaluation with Improved Correlation with Human Judgments. https://aclanthology.org/W05-0909.pdf\n",
     "‌</div>\n",
     "\n",
-    "**BERTScore**\n",
+    "**BERTScore**  <img src=\"images/bert.jpg\" alt=\"BERTScore Visualization\" width=\"100\" />\n",
+    "\n",
     "<div style=\"padding-left: 2em;\">\n",
+    "\n",
+    "A neural evaluation metric that uses contextual embeddings from pre-trained language models (like BERT) to calculate similarity scores between candidate and reference texts.\n",
+    "\n",
+    "Zhang, T., Kishore, V., Wu, F., Weinberger, K., & Artzi, Y. (n.d.). BERTSCORE: EVALUATING TEXT GENERATION WITH BERT. https://arxiv.org/pdf/1904.09675\n",
+    "\n",
+    "‌\n",
     "\n",
     "</div>"
    ]
@@ -113,11 +125,38 @@
     "\n",
     "#### Readability\n",
     "\n",
+    "For these, lower is better.\n",
+    "\n",
     "**Flesch-Kincaid Grade Level (FKGL)**\n",
+    "<div style=\"padding-left: 2em;\">\n",
+    "Used to evaluate the readability of English text. Result is given in a score that is equivalent to grade level in US schools - 12+ is college and graduate school.\n",
+    "\n",
+    "$$\n",
+    "\\text{Flesch-Kincaid Grade Level} = 0.39 \\times \\left( \\frac{\\text{total words}}{\\text{total sentences}} \\right) + 11.8 \\times \\left( \\frac{\\text{total syllables}}{\\text{total words}} \\right) - 15.59\n",
+    "$$\n",
+    "</div>\n",
     "\n",
     "**Dale-Chall Readability Score (DCRS)**\n",
     "\n",
+    "<div style=\"padding-left: 2em;\">\n",
+    "Starts with a list of 3000 words that are considered difficult for an (american?) fourth grader. Result is given in US grade level.\n",
+    "\n",
+    "$$\n",
+    "\\text{Dale-Chall Score} = 0.1579 \\times \\left( \\frac{\\text{difficult words}}{\\text{total words}} \\times 100 \\right) + 0.0496 \\times \\left( \\frac{\\text{total words}}{\\text{total sentences}} \\right)\n",
+    "$$\n",
+    "</div>\n",
+    "\n",
     "**Coleman-Liau Index (CLI)**\n",
+    "\n",
+    "<div style=\"padding-left: 2em;\">\n",
+    "Similiar to the others, but relies on characters in word instead of syllables per word.\n",
+    "\n",
+    "$$\n",
+    "\\text{CLI} = 0.0588 \\times \\left( \\frac{\\text{total letters}}{\\text{total words}} \\times 100 \\right) - 0.296 \\times \\left( \\frac{\\text{total sentences}}{\\text{total words}} \\times 100 \\right) - 15.8\n",
+    "$$\n",
+    "</div>\n",
+    "\n",
+    "\n",
     "\n",
     "**LENS**\n"
    ]
