update process section

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -34,7 +34,8 @@
     "   * We can run up to 10 evals a day with a task maximum of 100. Each run can take 4+ hours.\n",
     "2. Understand how all of the evaluation metrics work and what the results mean\n",
     "   * We're doing this by re-creating the [pipeline from 2024](https://github.com/TGoldsack1/BioLaySumm2024-evaluation_scripts) and running it locally. \n",
-    "   * The code had some issues when installed locally due to conflicting dependencies, missing checkpoints, and unequal file sizes. Dependencies were corrected by creating a very specific environment, missing checkpoints were fixed by using a different set of LENS checkpoints, and unequal file sizes were address by using the minimum length of the two files."
+    "   * The code had some issues when installed locally due to conflicting dependencies, missing checkpoints, and unequal file sizes. Dependencies were corrected by creating a very specific environment, missing checkpoints were fixed by using a different set of LENS checkpoints, and unequal file sizes were address by using the minimum length of the two files.\n",
+    "3. When we do evaluations locally, we are using the training data. When we use codabench, we are sending the test data per the requirements of the task. "
    ]
   },
   {
